# ArrhythmiaStudio

./: .gitignore  .gitmodules  ArrhythmiaStudio.sln  LICENSE  NotJSBEditor.sln  README.md
ArrhythmiaStudio/: ArrhythmiaStudio.vcxproj  ArrhythmiaStudio.vcxproj.bak  ArrhythmiaStudio.vcxproj.filters  CMakeLists.txt  imgui.ini  log4cxx.cfg
ArrhythmiaStudio/Assets/: Impact.asfont  Inconsolata.asfont  PinyonScript.asfont  PlayfairDisplay.asfont
ArrhythmiaStudio/Assets/Documentation/: doc_list.txt  general_usage.md  testing.md
ArrhythmiaStudio/Assets/Shaders/: text.frag  text.vert  unlit.frag  waveform.comp
ArrhythmiaStudio/Assets/Shapes/: hexagon.shp  hollow_circle_quarter.shp  hollow_hexagon.shp  hollow_square.shp  right_angled_triangle.shp  shapes_list.txt  square.shp  triangle.shp
ArrhythmiaStudio/Assets/StartupLevel/: level.njelv
ArrhythmiaStudio/copy_to_build/test_level/: level.aslv  meta.json
ArrhythmiaStudio/include/: event.h  helper.h  json.hpp  logger.h  utils.h
ArrhythmiaStudio/include/ffmpegcpp/: FFmpegException.cpp  FFmpegException.h  FrameContainer.cpp  ffmpegcpp.h
ArrhythmiaStudio/include/freetype/: LICENSE.TXT
ArrhythmiaStudio/include/glad/: glad.h
ArrhythmiaStudio/include/imgui/: imgui.h  imgui_markdown.h
ArrhythmiaStudio/include/log4cxx/: NOTICE  boost-std-configuration.h  (+3 more)
ArrhythmiaStudio/libs/: avdevice.lib  avformat.lib  avutil.lib  freetype.lib  harfbuzz-subset.lib  harfbuzz.lib  log4cxx.lib  swresample.lib
ArrhythmiaStudio/src/: Arguments.h  Main.cpp  MainWindow.cpp  MainWindow.h
ArrhythmiaStudio/test_level/: level.aslv
(+441 files in other folders)
